--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
         <artifactId>mongo-java-driver</artifactId>
         <version>2.12.3</version>
     </dependency>
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.24</version>
+</dependency>
   </dependencies>
 </project>
